--- a/index.css
+++ b/index.css
@@ -14,6 +14,9 @@
   width: 100%;
   height: 20%;
   border-bottom: 3px solid #2299cc;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .game-board {
@@ -46,4 +49,27 @@
   height: 20px;
   border-radius: 1000px;
   background: black;
+}
+
+.power-ups-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 33.3333%;
+}
+
+.power-ups-header {
+  height: 20%;
+  margin-top: 16px;
+}
+
+.power-ups-list {
+  height: 80%;
+  list-style-type: none;
+  overflow-y: auto;
+}
+
+.power-ups-list li {
+  cursor: pointer;
 }
