--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
 .game-header {
   width: 100%;
   height: 20%;
+  min-height: 20%;
   border-bottom: 3px solid #2299cc;
   display: flex;
   align-items: center;
@@ -22,7 +23,7 @@
 .game-board {
   width: 60%;
   height: 60%;
-  margin: 10% auto 10% auto;
+  margin: 5% auto 0 auto;
 }
 
 .board-row {
@@ -51,6 +52,11 @@
   background: black;
 }
 
+.dice-container {
+  height: 100%;
+  padding-top: 16px;
+}
+
 .power-ups-container {
   height: 100%;
   display: flex;
@@ -72,4 +78,29 @@
 
 .power-ups-list li {
   cursor: pointer;
+}
+
+.roll-dice {
+  height: 5%;
+  min-height: 5%;
+  width: 100%;
+  background: #44aadd;
+}
+
+.roll-dice:focus {
+  outline: none;
+  background: #1177aa;
+}
+
+.notification-div {
+  height: 5%;
+  min-height: 5%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.game-notification {
+  width: 100%;
+  text-align: center;
 }
